developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Shareholder__c/OJSERLIB__VEDA_Current_Shareholder__c.object-meta.xml
<CustomObject>
    <label>VEDA Current Shareholder</label>
    <nameField>
        <label>VEDA Current Shareholders Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VEDA Current Shareholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>