developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Shareholder__c/fields/OJSERLIB__Beneficially_Held__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Beneficially_Held__c</fullName>
    <label>Beneficially Held</label>
    <length>10</length>
    <type>Text</type>
</CustomField>