developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Shareholder__c/fields/OJSERLIB__Document_Number__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Document_Number__c</fullName>
    <label>Document Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>