developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Shareholder__c/fields/OJSERLIB__Fully_Paid__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Fully_Paid__c</fullName>
    <label>Fully Paid</label>
    <length>10</length>
    <type>Text</type>
</CustomField>