developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Shareholder__c/fields/OJSERLIB__Individual_Shareholder_Address__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Individual_Shareholder_Address__c</fullName>
    <label>Individual Shareholder Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>