developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Shareholder__c/fields/OJSERLIB__Number_Held__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Number_Held__c</fullName>
    <label>Number Held</label>
    <length>9</length>
    <type>Text</type>
</CustomField>