developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Shareholder__c/fields/OJSERLIB__Shareholder_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Shareholder_Name__c</fullName>
    <label>Shareholder Name</label>
    <length>125</length>
    <type>Text</type>
</CustomField>