developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Shareholder__c/fields/OJSERLIB__VEDA_Public_and_Credit_HistoryID__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Public_and_Credit_HistoryID__c</fullName>
    <label>VEDA Public and Credit History</label>
    <referenceTo>OJSERLIB__VEDA_Public_and_Credit_History_Info__c</referenceTo>
    <relationshipLabel>VEDA Current Shareholders</relationshipLabel>
    <relationshipName>VEDA_Current_Shareholders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>